--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+*{
+}
+
 .header-img{
     background-image: url('../donate-today-main/images/donation13.jpg');
     height: 600px;
@@ -6,22 +9,23 @@
     background-position: center;
     background-size: 100%;
 }
-h2{
+.header-img h2{
     text-align: center;
     padding-top: 200px;
     color: #FFF;
     font-weight: 700px;
     font-size: 65px;
 }
-p{
+.header-img p{
     text-align: center;
     color: #FFF;
 }
 button{
-    background: orange;
+    background: rgb(247, 75, 75);
     border-radius: 10px;
+    padding-top: 50px;
 }
-.button{
+#button{
     text-align: center;
 }
 .primary-btn{
@@ -29,6 +33,60 @@ button{
     color: white;
     padding: 15px;
     font-weight: 700;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 30px;
 
 }
+/* donate today header */
+.Donate-today{
+    text-align: center;
+}
+.Donate-title{
+    font-size: 50px;
+    font-weight: 800;
+    color: black;
+    padding-top: 130px;
+
+}
+.donate-discription{
+    color: #707070;
+    font-size: 18px;
+    text-align: center;
+    padding-right: 300px;
+    padding-left: 300px;
+}
+.taka {
+    list-style: none; 
+    display: flex;
+    gap: 50px;
+    padding-left: 200px;
+    padding-right: 300px;
+    padding-bottom: 50px;
+
+}
+.taka h4{ 
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    background: #FAFAFA;
+    padding: 30px;
+    border-radius: 5px;
+}
+#tk{
+    color: #FF5959;
+    border: 2px solid #FF5959;
+    background: #FEE;
+}
+
+.ammount{
+    text-align: center;
+    padding-left: 200px;
+    padding-right: 200px;
+    color: #B3B3B3;
+    font-size: 18px;
+    font-weight: 400px;
+}
+
+
 
