--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
-*{
-}
+
 
 .header-img{
     background-image: url('../donate-today-main/images/donation13.jpg');
@@ -51,11 +50,11 @@ button{
 
 }
 .discription{
-    color: #707070;
     font-size: 18px;
     text-align: center;
     padding-right: 300px;
     padding-left: 300px;
+    color: #707070;
 }
 .taka {
     list-style: none; 
@@ -96,6 +95,7 @@ button{
     margin-right: 60px;
     padding-left: 80px;
     padding-right: 80px;
+    
 }
 .plans-bar-1{
     padding: 30px;
@@ -128,10 +128,64 @@ button{
     font-size: 16px;
     font-weight: 400;
 }
+/* photos and donation section styles */
+.photos{
+    margin-right: 120px;
+    margin-left: 100px; 
+    
+}
+.bg-img{
+    background-image: url('../donate-today-main/images/image\ 1.png');
+    background-repeat: no-repeat;
+    background-position: bottom right; 
+    padding-right: 200px;
+    width: 500px;
+    height: 500px;  
+}
+.bg-img-2{
+    background-image:url('../donate-today-main/images/donation10.jpg') ;
+    background-position: bottom right; 
+    padding-right: 200px;
+    width: 500px;
+    height: 450px;
+    padding-bottom: 50px;
+}
 
-  
+.donation-section{
+    display: flex;
+    padding-top: 20px;
+    align-items: center;
+    padding-bottom: 50px; 
+    
+}
+.donation-title{
+    font-size: 45px;
+    font-weight: 700;
+    color: black;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-left: 52px;
+    text-align: left;
+    
+}
+.donation-discription{
+    font-size: 18px;
+    color: #707070;
+    padding-right: 10px;
+    padding-left: 50px;
+}
+.donation-img{
+    height: 200px;
+    width: 250px;
 
-
-
-
+}
+.primary-btn-2{
+    margin-left: 50px;
+    color: white;
+    padding: 15px;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 30px;
+}
 
