--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
-
+body{
+    font-family: 'Noto Sans', sans-serif;
+}
 
 .header-img{
     background-image: url('../donate-today-main/images/donation13.jpg');
@@ -45,7 +47,7 @@ button{
     font-size: 50px;
     font-weight: 800;
     color: black;
-    padding-top: 130px;
+    padding-top: 60px;
     text-align: center;
 
 }
@@ -174,11 +176,6 @@ button{
     padding-right: 10px;
     padding-left: 50px;
 }
-.donation-img{
-    height: 200px;
-    width: 250px;
-
-}
 .primary-btn-2{
     margin-left: 50px;
     color: white;
@@ -188,4 +185,49 @@ button{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 30px;
 }
+/* (last) div styles */
+.last {
+    text-align: center;
+    padding: 60px;
+    background: #FFF4D6;
+    margin-left: 250px; 
+    margin-right: 250px;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    
+}
+.last input{
+    text-align: left;
+    color: #AA9F9F;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 10px 15px;
+    background: #D9D9D9;
+    
 
+}
+/* footer styles */
+
+.footer{
+    background: var(--Default-Black, #0B0D17);
+    height: 180px;
+    padding-bottom: 15px;
+    
+    
+}
+.footer-title{
+    font-size: 36px;
+    font-weight: 400;
+    color: #FF5959;
+    text-align: center;
+    padding-top: 50px;
+    font-family: 'Lobster', sans-serif;
+    
+    
+}
+.footer-discription{
+    color: #D9DBE1;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center; 
+}
